--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -7,9 +7,9 @@
   <% end %>
 </div>
 <div>
-  <strong>Ano de fabricação: </strong><%= @vehicle.year %><br>
-  <strong>Capacidade de carga: </strong><%= @vehicle.load_capacity/100 %>kg<br>
-  <strong>Em manutenção: </strong> <%= I18n.translate(@vehicle.maintenance) %><br>
-  <strong>Disponível: </strong><%= I18n.translate(@vehicle.available && !@vehicle.maintenance) %><br>
+  Ano de fabricação: <%= @vehicle.year %><br>
+  Capacidade de carga: <%= @vehicle.load_capacity/100 %>kg<br>
+  Em manutenção:  <%= I18n.translate(@vehicle.maintenance) %><br>
+  Disponível: <%= I18n.translate(@vehicle.available && !@vehicle.maintenance) %><br>
 </div>
 </section>
