--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,6 @@ body  {
 
 /* ====== header ====== */
 
-
 .logo {
     display: flex;
     align-items: center;
@@ -101,22 +100,20 @@ input[type=submit]:hover {
 
 .button {
     font-weight: bold;
-    /* align-items: center;
-    justify-content: center;
-    background-color: #009DFF;
-    color: white;
-    font-weight: bold;
-    width: auto;
-    height: 46px;
+    padding: 15px;
     border-radius: 23px;
-    border-style: none;
-    padding-left:20px;
-    padding-right: 20px;
-    display: block; */
+    color: white;
+    background-color: #009DFF;
+    padding-left:30px;
+    padding-right: 30px;
 }
 
-a:hover {
-    color: #1d88cb
+.button:hover {
+    background-color: #1d88cb;
+}
+
+nav a:hover {
+    color:  #009DFF;
 }
 
 .alert {
