--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -106,6 +106,7 @@ input[type=submit]:hover {
     background-color: #009DFF;
     padding-left:30px;
     padding-right: 30px;
+    cursor: pointer;
 }
 
 .button:hover {
@@ -153,14 +154,18 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 450px;
+    width: 550px;
     border-radius: 23px;
     background-color: rgb(233, 233, 233);
     box-shadow: 0px 0px 26px 13px rgba(0,0,0,0.25);
     padding: 100px;
-    padding-top: 60px;
-    padding-bottom: 60px;
     margin: 0 auto;
+    gap: 50px;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
     gap: 30px;
 }
 
@@ -172,6 +177,14 @@ nav a:hover {
 
 button {
     cursor: pointer;
+    font-weight: bold;
+    padding: 15px;
+    border-radius: 23px;
+    color: white;
+    background-color: #009DFF;
+    padding-left:30px;
+    padding-right: 30px;
+    border-style: none;
 }
 
 button:hover {
@@ -194,5 +207,5 @@ a {
 h2 {
     text-align: center;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
 }
