--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,7 @@
 
 body  {
     color: #5A5A5A;
+    background-color: #ececec;
 }
 
 /* ====== header ====== */
@@ -41,13 +42,14 @@ header .search-bar {
 }
 
 header button {
-    width: 120px;
+    width: 110px;
     height: 46px;
     border-radius: 23px;
     color:#009DFF;
     background-color: white;
     border-style: none;
     font-weight: bold;
+    padding: 0;
 }
 
 header input[type=submit] {
@@ -61,7 +63,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     height: 50px;
-    background-color: #E5E5E5;
+    background-color: rgb(225, 225, 225);
     padding: 0 40px 0 40px;
 }
 
@@ -71,7 +73,8 @@ nav a {
 
 nav .selected {
     font-weight: bold;
-    }
+    color:#009DFF;
+}
 
 nav .menu-links {
     display: flex;
@@ -107,6 +110,7 @@ input[type=submit]:hover {
     padding-left:30px;
     padding-right: 30px;
     cursor: pointer;
+    text-align: center;
 }
 
 .button:hover {
@@ -156,8 +160,8 @@ nav a:hover {
     align-items: center;
     width: 550px;
     border-radius: 23px;
-    background-color: rgb(233, 233, 233);
-    box-shadow: 0px 0px 26px 13px rgba(0,0,0,0.25);
+    background-color: rgb(225, 225, 225);
+    /* box-shadow: 0px 0px 26px 13px rgba(0,0,0,0.25); */
     padding: 100px;
     margin: 0 auto;
     gap: 50px;
