--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,5 +1,6 @@
 <section class='page-layout'>
 <h2>Veículos</h2>
+<div class="buttons">
 <% if current_user.admin? %>
   <%= link_to 'Adicionar novo veículo', new_vehicle_path, class: 'button' %>
 <% end %>
@@ -7,6 +8,7 @@
   <%= f.text_field :query_vehicle, placeholder: 'Placa do veículo', class: 'search-bar' %>
   <%= f.submit 'Buscar' %>
 <% end %>
+</div>
 <div class="list">
 <% @vehicles.each do |v| %>
   <div>
