--- a/app/views/shipping_types/_form.html.erb
+++ b/app/views/shipping_types/_form.html.erb
@@ -28,7 +28,7 @@
     <%= f.check_box :active %>
   </div>
   <div>
-    <br><%= f.submit 'Salvar' %>
+    <%= f.submit 'Salvar' %>
   </div>
 
 <% end %>
