--- a/app/views/weight_configurations/index.html.erb
+++ b/app/views/weight_configurations/index.html.erb
@@ -1,4 +1,4 @@
-<section class='page-layout'>
+<section class='page-layout table'>
   <h2>Configurações de preço por peso</h2>
   <div class='page-title'>
     <% if current_user.admin? %>
@@ -9,7 +9,7 @@
     <% end %>
   </div>
 
-  <p>Tabela de preço por peso</p>
+  <h3>Tabela de preço por peso</h3>
   <table>
     <tr>
       <th>Intervalo de peso</th>
