--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,17 +45,34 @@ header button {
     width: 110px;
     height: 46px;
     border-radius: 23px;
-    color:#009DFF;
-    background-color: white;
+    color:white;
+    background-color: #1d88cb;
     border-style: none;
     font-weight: bold;
     padding: 0;
 }
 
+header button:hover {
+    background-color: #0e669e;
+    color: white;
+}
+
 header input[type=submit] {
-    color: #009DFF;
-    background-color: white;
+    color: white;
+    background-color: #1d88cb;
     cursor: pointer;
+}
+
+header input[type=submit]:hover {
+    background-color: #0e669e;
+}
+
+header .button {
+    background-color: #1d88cb;
+}
+
+header .button:hover {
+    background-color: #0e669e;
 }
 
 nav {
@@ -98,7 +115,11 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    color: #1d88cb;
+    background-color: #1d88cb;
+}
+
+.page-layout input[type=submit] {
+    width: 100%;
 }
 
 .button {
@@ -121,6 +142,12 @@ nav a:hover {
     color:  #009DFF;
 }
 
+nav {
+    border-style: solid;
+    border-color: rgb(205, 205, 205);
+    border-width: 1px;;
+}
+
 .alert {
     padding: 20px;
     text-align: center;
@@ -129,8 +156,12 @@ nav a:hover {
 
 /* ====== form ====== */
 
-.form {
-    width: 40%;
+.login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
 }
 
 .form .input-wrapper {
@@ -138,11 +169,18 @@ nav a:hover {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    gap: 30px;
 }
 
-.form input {
-    width: 200px;
+.form {
+    display: flex;
+    flex-direction: column;
+    gap:20px;
 }
+
+/* .form input {
+    width: 200px;
+} */
 
 /* =======layout====== */
 .main {
@@ -150,21 +188,49 @@ nav a:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 .page-layout {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 550px;
+    width: 500px;
     border-radius: 23px;
     background-color: rgb(225, 225, 225);
     /* box-shadow: 0px 0px 26px 13px rgba(0,0,0,0.25); */
-    padding: 100px;
+    padding: 60px;
     margin: 0 auto;
     gap: 50px;
+    border-style: solid;
+    border-color: rgb(205, 205, 205);
+    border-width: 1px;;
+}
+
+.page-layout input {
+    border-style: solid;
+    border-color: rgb(205, 205, 205);
+    border-width: 1px;;
+}
+
+table {
+    width: 800px;
+}
+
+.table {
+    width: 900px;
+}
+
+tr button {
+    height: 30px;
+    width: 100px;
+    padding: 0;
+}
+
+tr button:hover {
+    color: white;
+    background-color: #1d88cb;
 }
 
 .list {
@@ -195,13 +261,13 @@ button:hover {
     color: #1d88cb
 }
 /* ============= */
-
+/*
 .page-title {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 40px;
-}
+} */
 
 a {
     color:#009DFF;
@@ -212,4 +278,9 @@ h2 {
     text-align: center;
     font-weight: bold;
     font-size: 20px;
+}
+
+h3 {
+    font-weight: bold;
+    font-size: 16px;
 }
