--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,12 +4,12 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field">
-      <%= f.label :email %><br />
+      <%= f.label :email %>
       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
     </div>
 
     <div class="actions">
-      <br><%= f.submit "Mande-me instruções" %>
+      <%= f.submit "Mande-me instruções" %>
     </div>
   <% end %>
 
