--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field">
-      <%= f.label :name %><br>
+      <%= f.label :name %>
       <%= f.text_field :name, autofocus: true %>
     </div>
 
@@ -17,19 +17,19 @@
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em>(mínimo de <%= @minimum_password_length %> caracteres)</em>
-      <% end %><br />
+      <% end %>
       <%= f.password_field :password, autocomplete: "new-password" %>
     </div>
 
     <div class="field">
-      <%= f.label :password_confirmation %><br />
+      <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
-    <br>
     <div class="actions">
       <%= f.submit "Sign up" %>
     </div>
   <% end %>
 
-  <br><%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
   </div>
+
