--- a/app/views/work_orders/search.html.erb
+++ b/app/views/work_orders/search.html.erb
@@ -1,10 +1,10 @@
 <section class='page-layout'>
 <h2>Resultado da busca por: <%= @code %></h2>
-<div class='page-title'>
-</div>
+<div class="list">
 <% @work_orders.each do |w| %>
   <%= render w %>
 <% end %>
+</div>
 
 <% if @work_orders.empty? %>
   <p>Nenhum resultado encontrado.</p>
