--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -9,11 +9,11 @@
 <% end %>
 <div class="list">
 <% @vehicles.each do |v| %>
-  <div>
+  <div class="list-item">
     <h3><%= v.manufacturer %> <%= v.model %> <%= link_to(v.license_plate, vehicle_path(v.id)) %> </h3>
       <dl>
-        <dt>Em manutenção: <%= I18n.translate(v.maintenance) %></dt>
-        <dt>Disponível: <%= I18n.translate(v.available && !v.maintenance) %></dt>
+        <dt><img src=<%= image_path('tool.svg') %>> Em manutenção: <%= I18n.translate(v.maintenance) %></dt>
+        <dt><img src=<%= image_path('check-circle.svg') %>>Disponível: <%= I18n.translate(v.available && !v.maintenance) %></dt>
       <dl>
     </div>
 <% end %>
