--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -23,7 +23,7 @@
     <%= f.label :maintenance, 'Em manutenção:' %>
     <%= f.check_box :maintenance %>
     </div>
-  <div>
+  <div class="buttons">
     <%= f.submit 'Salvar' %>
   </div>
 <% end %>
