--- a/app/views/work_orders/_form.html.erb
+++ b/app/views/work_orders/_form.html.erb
@@ -19,8 +19,8 @@
     <%= f.label :distance, 'Distância:' %>
     <%= f.number_field :distance, placeholder: 'Distância em kilômetros' %>
   </div>
-  <div>
-    <br><%= f.submit 'Salvar' %>
+  <div class='page-title'>
+    <%= f.submit 'Salvar' %>
   </div>
 <% end %>
 
