--- a/app/views/work_orders/late.html.erb
+++ b/app/views/work_orders/late.html.erb
@@ -5,7 +5,7 @@
     <%= label_tag :delay_cause, 'Justificativa do atraso:' %>
     <%= text_area_tag :delay_cause %>
   </div>
-    <br><%= submit_tag 'Salvar' %>
+    <%= submit_tag 'Salvar' %>
   </div>
 <% end %>
 </section>
