--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -1,4 +1,4 @@
-<section class='page-layout'>
+<section class='page-layout table'>
 <h2>Ordem de Serviço: <%= @work_order.code %> </h2>
 <div class='page-title-two-buttons'>
   <%= link_to 'Voltar', work_orders_path, class: 'button' %>
@@ -6,29 +6,30 @@
     <%= link_to('Editar', edit_work_order_path(@work_order.id), class: 'button') %>
   <% end %>
 </div>
-<div>
-  <strong>Endereço de saída: </strong><%= @work_order.pickup_address %><br>
-  <strong>Endereço de entrega: </strong><%= @work_order.delivery_address %><br>
-  <strong>Distância: </strong><%= @work_order.distance %>km<br>
-  <strong>Peso do produto: </strong><%= @work_order.product_weight/100.to_f%>kg<br>
-  <strong>Código do produto: </strong><%= @work_order.product_code %> <br>
-  <strong>Status: </strong><%= I18n.translate(@work_order.status) %><br>
+<div class="list-item">
+  <dl>
+    <dt>Endereço de saída: <%= @work_order.pickup_address %></dt>
+    <dt>Endereço de entrega: <%= @work_order.delivery_address %></dt>
+    <dt>Distância: <%= @work_order.distance %>km</dt>
+    <dt>Peso do produto: <%= @work_order.product_weight/100.to_f%>kg</dt>
+    <dt>Código do produto: <%= @work_order.product_code %> </dt>
+    <dt>Status: <%= I18n.translate(@work_order.status) %></dt>
 
   <% if @work_order.status == 'on_the_way' %>
-    <strong>Veículo: </strong><%= @work_order.vehicle.license_plate.upcase %> <br>
-    <strong>Prazo: </strong> <%= I18n.localize(@work_order.date)%><br>
-    <strong>Data de início: </strong><%= I18n.localize(@work_order.start_date) %><br>
+    <dt>Veículo: <%= @work_order.vehicle.license_plate.upcase %> </dt>
+    <dt>Prazo:  <%= I18n.localize(@work_order.date)%></dt>
+    <dt>Data de início: <%= I18n.localize(@work_order.start_date) %></dt>
   <% end %>
 
   <% if @work_order.status == 'delivered' %>
-    <strong>Veículo: </strong><%= @work_order.vehicle.license_plate.upcase %><br>
-    <strong>Prazo: </strong> <%= I18n.localize(@work_order.date)%><br>
-    <strong>Data de início: </strong><%= I18n.localize(@work_order.start_date) %><br>
-    <strong>Data de finalização: </strong><%= I18n.localize(@work_order.end_date) %><br>
+    <dt>Veículo: <%= @work_order.vehicle.license_plate.upcase %></dt>
+    <dt>Prazo:  <%= I18n.localize(@work_order.date)%></dt>
+    <dt>Data de início: <%= I18n.localize(@work_order.start_date) %></dt>
+    <dt>Data de finalização: <%= I18n.localize(@work_order.end_date) %></dt>
   <% end %>
 
   <% if @work_order.shipping_type %>
-    <strong>Modalidade de transporte:</strong> <%= @work_order.shipping_type.name %> - <%= number_to_currency(@work_order.price) %><br>
+    <dt>Modalidade de transporte: <%= @work_order.shipping_type.name %> - <%= number_to_currency(@work_order.price) %></dt>
     <% if @work_order.status == 'pending' %>
     <%= button_to('Iniciar ordem de serviço', work_order_start_path(@work_order.id), method: :post) %>
     <% end %>
@@ -36,6 +37,7 @@
     <%= button_to('Finalizar ordem de serviço', work_order_end_path(@work_order.id), method: :post) %>
     <% end %>
   <% end %>
+  </dl>
 </div>
 
 <% if @work_order.status == 'pending' %>
@@ -56,7 +58,7 @@
     <% end %>
 <% end %>
 <% if @work_order.status == 'late' %>
-  <strong>Justificativa de atraso: </strong><%= @work_order.delay_cause %><br>
+  Justificativa de atraso: <%= @work_order.delay_cause %><br>
 <% end %>
 
 <% if @available_shipping_types.empty? %>
