--- a/app/views/price_per_distance_configurations/_form.html.erb
+++ b/app/views/price_per_distance_configurations/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.label :shipping_type_id, 'Modalidade de transporte:' %>
     <%= f.select :shipping_type_id, PricePerDistanceConfiguration.shipping_types_for_select %>
   </div>
-  <div>
+  <div class="page-title">
     <%= f.submit 'Salvar' %>
   </div>
 <% end %>
