--- a/app/views/weight_configurations/_form.html.erb
+++ b/app/views/weight_configurations/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.label :shipping_type_id, 'Modalidade de transporte:' %>
     <%= f.select :shipping_type_id, WeightConfiguration.shipping_types_for_select %><br>
   </div>
-  <div>
+  <div class="page-title">
     <br><%= f.submit 'Salvar' %>
   </div>
 <% end %>
